<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WifiDisable">

    <EditText
        android:id="@+id/duration"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-199dp"
        android:layout_marginTop="185dp"
        android:layout_toEndOf="@+id/toggleButton"
        android:autofillHints="00:05"
        android:hint="@string/disableDurationHint"
        android:ems="10"
        android:inputType="time" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="142dp"
        android:layout_height="94dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="127dp"
        android:onClick="toggleDisable"
        android:text="@string/disableButtonText" />

    <Spinner
        android:id="@+id/durationType"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="191dp"
        android:layout_toEndOf="@+id/duration"
        android:entries="@array/durationType" />
</RelativeLayout>